main/default/objects/Action__c/fields/Additional_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Additional_Metadata__c</fullName>
    <label>Additional Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>