main/default/objects/Action__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>JIRA Epic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>