main/default/objects/Action__c/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <label>Channel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>