main/default/objects/Action__c/fields/EmailBody__c.field-meta.xml
<CustomField>
    <fullName>EmailBody__c</fullName>
    <label>Email Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>