main/default/objects/Action__c/fields/EmailCC__c.field-meta.xml
<CustomField>
    <fullName>EmailCC__c</fullName>
    <label>Email CC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>