main/default/objects/Action__c/fields/EmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateId__c</fullName>
    <label>Email Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>