main/default/objects/Action__c/fields/EmailTo__c.field-meta.xml
<CustomField>
    <fullName>EmailTo__c</fullName>
    <label>Email To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>