main/default/objects/Action__c/fields/JIRAAssignee__c.field-meta.xml
<CustomField>
    <fullName>JIRAAssignee__c</fullName>
    <label>JIRA Assignee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>