main/default/objects/Action__c/fields/JIRAAssignee_Id__c.field-meta.xml
<CustomField>
    <fullName>JIRAAssignee_Id__c</fullName>
    <label>JIRAAssignee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>