main/default/objects/Action__c/fields/JIRAComponents__c.field-meta.xml
<CustomField>
    <fullName>JIRAComponents__c</fullName>
    <label>JIRA Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>