main/default/objects/Action__c/fields/JIRAEpic__c.field-meta.xml
<CustomField>
    <fullName>JIRAEpic__c</fullName>
    <label>JIRA Epic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>