main/default/objects/Action__c/fields/JIRAIssueType__c.field-meta.xml
<CustomField>
    <fullName>JIRAIssueType__c</fullName>
    <label>JIRA Issue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>