main/default/objects/Action__c/fields/JIRALabels__c.field-meta.xml
<CustomField>
    <fullName>JIRALabels__c</fullName>
    <label>JIRA Labels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>