main/default/objects/Action__c/fields/JIRAPriority__c.field-meta.xml
<CustomField>
    <fullName>JIRAPriority__c</fullName>
    <label>JIRA Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>