main/default/objects/Action__c/fields/JIRAProject__c.field-meta.xml
<CustomField>
    <fullName>JIRAProject__c</fullName>
    <label>JIRA Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>