main/default/objects/Action__c/fields/PagerDuty_Type__c.field-meta.xml
<CustomField>
    <fullName>PagerDuty_Type__c</fullName>
    <label>PagerDuty Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>