main/default/objects/Action__c/fields/SlackChannels__c.field-meta.xml
<CustomField>
    <fullName>SlackChannels__c</fullName>
    <label>Slack Channels</label>
    <length>255</length>
    <type>Text</type>
</CustomField>