main/default/objects/Action__c/fields/Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Team_Id__c</fullName>
    <label>Team Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>