main/default/objects/Action__c/fields/Webhook_Auth_Type__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Auth_Type__c</fullName>
    <description>Authentication method for the webhook</description>
    <label>Webhook Auth Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Bearer</fullName>
            </value>
            <value>
                <fullName>API_Key</fullName>
                <label>API Key</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>