main/default/objects/Action__c/fields/Webhook_Auth_Value__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Auth_Value__c</fullName>
    <description>Authentication credential (token, API key, etc.). Note: For production use, convert this field to Encrypted Text via UI for enhanced security.</description>
    <label>Webhook Auth Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>