main/default/objects/Action__c/fields/Webhook_Body_Template__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Body_Template__c</fullName>
    <description>JSON body template with merge field support (e.g., {&quot;log_id&quot;: &quot;{!Log__c.Id}&quot;})</description>
    <label>Webhook Body Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>