main/default/objects/Action__c/fields/Webhook_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Content_Type__c</fullName>
    <description>Content-Type header value (default: application/json)</description>
    <label>Webhook Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>