main/default/objects/Action__c/fields/Webhook_Headers__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Headers__c</fullName>
    <description>Custom HTTP headers in JSON format (e.g., {&quot;X-API-Key&quot;: &quot;value&quot;})</description>
    <label>Webhook Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>