main/default/objects/Action__c/fields/Webhook_Method__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Method__c</fullName>
    <description>HTTP method for the webhook request (e.g., GET, POST, PUT, PATCH, DELETE)</description>
    <label>Webhook Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>