main/default/objects/Action__c/fields/Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL__c</fullName>
    <description>Target URL for the webhook request</description>
    <label>Webhook URL</label>
    <type>Url</type>
</CustomField>