main/default/objects/Action__c/fields/Webhook_URL_Domain__c.field-meta.xml
<CustomField>
    <fullName>Webhook_URL_Domain__c</fullName>
    <description>Domain extracted from Webhook URL for determining unique active actions</description>
    <label>Webhook URL Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>