main/default/objects/Action__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Subtype__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>